# sir-classroom

./: .gitignore  README.md  pyproject.toml
data/: classroom.xlsx  namelist.xlsx
sir/: agents.py  boxes.py  classroom.py  run.py  simulation.py
