[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sir-classroom"
version = "0.1.0"
authors = [
  { name="Florian Schunck", email="fluncki@protonmail.com" },
  { name="Paula Scharlach", email="paula.scharlach@uni-osnabrueck.de" },
]
description = "A simple SIR model for classroom epidemics"
readme = "README.md"
requires-python = ">=3.12"
dependencies=[
    "numpy == 1.26.4",
    "scipy == 1.13.0",
    "matplotlib == 3.8.4",
    "imageio == 2.34.1",
    "openpyxl == 3.1.2",
    "pandas == 2.2.2"
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
"Homepage" = "https://github.com/flo-schu/sir-classroom"
"Issue Tracker" = "https://github.com/flo-schu/sir-classroom/issues"

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"pymob/__init__.py" = [
    '__version__ = "{version}"'
]
"docs/source/conf.py" = [
    'release = "{version}"'
]
